UI changes done

--- a/frontend/src/app/features/branch-coordinator-assignment/branch-coordinator-assignment.html
+++ b/frontend/src/app/features/branch-coordinator-assignment/branch-coordinator-assignment.html
@@ -1,7 +1,7 @@
 <!-- ================= TABLE VIEW ================= -->
 <div>
     <div class="d-flex justify-content-between align-items-center mb-3">
-        <h5 class="mb-0">Branch Coordinator Assignments</h5>
+        <h5 class="mb-0">Branch & Branch Coordinator Assignments</h5>
 
         <button nz-button nzType="primary" class="nz-button-primary p-1" (click)="openAddForm()">
             <i class="fa fa-plus me-2"></i>
