--- a/frontend/src/app/features/delivery-route-binding-component/delivery-route-binding-component.html
+++ b/frontend/src/app/features/delivery-route-binding-component/delivery-route-binding-component.html
@@ -2,7 +2,7 @@
 
 <div>
     <div class="d-flex justify-content-between align-items-center mb-3">
-        <h5 class="mb-0">Delivery Route Binding</h5>
+        <h5 class="mb-0">Delivery Route Sub-Branch Binding</h5>
 
         <div class="d-flex gap-2">
             <button nz-button nzType="primary" class="nz-button-primary p-1" (click)="openAddForm()">
