--- a/frontend/src/app/layout/sidebar/sidebar.html
+++ b/frontend/src/app/layout/sidebar/sidebar.html
@@ -26,17 +26,17 @@
 
     <li nz-menu-item routerLink="/branch-dashboard-binding" routerLinkActive="nz-menu-item-selected">
         <i class="fas fa-project-diagram me-2"></i>
-        <span *ngIf="!collapsed">Conference Binding</span>
+        <span *ngIf="!collapsed">DashBoard Binding</span>
     </li>
 
     <li nz-menu-item routerLink="/sub-branch-binding" routerLinkActive="nz-menu-item-selected">
         <i class="fas fa-code-branch me-2"></i>
-        <span *ngIf="!collapsed">Sub-Branch Binding</span>
+        <span *ngIf="!collapsed">Sub-Branch Definition</span>
     </li>
 
     <li nz-menu-item routerLink="/delivery-route-definition" routerLinkActive="nz-menu-item-selected">
         <i class="fas fa-map-marked-alt me-2"></i>
-        <span *ngIf="!collapsed">Delivery Route</span>
+        <span *ngIf="!collapsed">Delivery Route Description</span>
     </li>
 
     <li nz-menu-item routerLink="/delivery-route-binding" routerLinkActive="nz-menu-item-selected">
