--- a/frontend/src/app/features/branch-general-employee-binding/branch-general-employee-binding.html
+++ b/frontend/src/app/features/branch-general-employee-binding/branch-general-employee-binding.html
@@ -1,6 +1,6 @@
 <div>
     <div class="d-flex justify-content-between align-items-center mb-3">
-        <h5 class="mb-0">Branch General Employee Bindings</h5>
+        <h5 class="mb-0">Branch & General Employee Bindings</h5>
 
         <button nz-button nzType="primary" class="nz-button-primary p-1" (click)="openAddForm()">
             <i class="fa fa-plus me-2"></i>
